[metadata]
name = gpt-utils
version = 0.0.2
author = Nelson Love
author_email = nelson@nelson.love
description = Collection of utilities for use with GPT-3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nelsonlove/gpt-utils
project_urls =
    Bug Tracker = https://github.com/nelsonlove/gpt-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src