[metadata]
name = gpt_utils
version = 0.8.0
license = MIT
license_files =
    LICENSE.txt
description = Collection of utilities for use with OpenAI's GPT-3 language model
long_description = file: README.md
author = Nelson Love
author_email = nelson@nelson.love
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing :: Linguistic
project_urls =
    Bug Tracker = https://github.com/nelsonlove/gpt_utils/issues
    Changelog = https://github.com/nelsonlove/gpt_utils/blob/master/CHANGELOG.md

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    openai
    transformers

[options.packages.find]
where=src
